--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -160,3 +160,36 @@
 	year={2003},
 	publisher={American Psychological Association}
 }
+
+@article{somaya2008gone,
+	title={Gone but not lost: The different performance impacts of employee mobility between cooperators versus competitors},
+	author={Somaya, Deepak and Williamson, Ian O and Lorinkova, Natalia},
+	journal={Academy of Management Journal},
+	volume={51},
+	number={5},
+	pages={936--953},
+	year={2008},
+	publisher={Academy of Management Briarcliff Manor, NY}
+}
+
+@article{johnson2004history,
+	title={History and use of relative importance indices in organizational research},
+	author={Johnson, Jeff W and LeBreton, James M},
+	journal={Organizational research methods},
+	volume={7},
+	number={3},
+	pages={238--257},
+	year={2004},
+	publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{lundberg2020local,
+	title={From local explanations to global understanding with explainable AI for trees},
+	author={Lundberg, Scott M and Erion, Gabriel and Chen, Hugh and DeGrave, Alex and Prutkin, Jordan M and Nair, Bala and Katz, Ronit and Himmelfarb, Jonathan and Bansal, Nisha and Lee, Su-In},
+	journal={Nature machine intelligence},
+	volume={2},
+	number={1},
+	pages={56--67},
+	year={2020},
+	publisher={Nature Publishing Group}
+}
